--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -28,3 +28,24 @@ html, body{
     position: relative;
     max-width: 1024px;
 }
+
+#inputContainer{
+    width: 400px;
+    padding: 45px;
+    float: left;
+    border-right: 1px solid #999;
+}
+
+#inputContainer h2{
+    text-align: center;
+}
+
+#inputContainer input[type="text"],  #inputContainer input[type="email"], #inputContainer input[type="password"] {
+    border: 0;
+    border-bottom: 1px solid #fff;
+    display: block;
+    background-color: transparent;
+    height: 27px;
+    line-height: 27px;
+    width: 100%;
+}
