--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -95,6 +95,7 @@ html, body{
 .hasAccountText span {
     font-size: 12px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 #registerForm, #loginForm{
