--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,15 @@ html, body {
 
 #nowPlayingBarContainer{
     background-color: #282828;
-    height: 100px;
     width: 100%;
     bottom: 0;
     position: fixed;
     min-width: 620px;
+}
+
+#nowPlayingBar{
+    display: flex;
+    height: 90px;
+    padding: 16px;
+    box-sizing: border-box;
 }
