--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,16 @@ html, body {
     padding: 16px;
     box-sizing: border-box;
 }
+
+#nowPlayingLeft, #nowPlayingRight{
+    min-width: 180px;
+    width: 30%;
+}
+
+#nowPlayingCenter{
+    width: 40%;
+    max-width: 700px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
