--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,3 +78,21 @@ html, body {
 .playbackBar{
     display: flex;
 }
+
+.progressBarBg{
+    width: 100%;
+    background-color: #404040;
+    height: 4px;
+    border-radius: 2px;
+}
+
+.progress{
+    border-radius: 2px;
+    width: 0;
+    height: 4px;
+    background-color: #a0a0a0;
+}
+
+.playbackBar .progressBar{
+    margin-top: 3px;
+}
