--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,11 @@ html, body {
     width: 30%;
 }
 
+#nowPlayingRight {
+    position: relative;
+    margin-top: 16px;
+}
+
 #nowPlayingCenter{
     width: 40%;
     max-width: 700px;
@@ -47,7 +52,7 @@ html, body {
     display: table;
 }
 
-.buttons .controlButton{
+.controlButton{
     background-color: transparent;
     border: none;
     vertical-align: middle;
@@ -124,4 +129,14 @@ html, body {
 #nowPlayingLeft .trackInfo .artistName span{
     font-size: 12px;
     color: #a0a0a0;
+}
+
+.volumeBar{
+    width: 180px;
+    position: absolute;
+    right: 0;
+}
+
+.volumeBar .progressBar{
+    width: 125px;
 }
