--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ html, body {
     color: white;
 }
 
-#nowPlayingBarContainer{
+#nowPlayingBarContainer {
     background-color: #282828;
     width: 100%;
     bottom: 0;
@@ -17,14 +17,14 @@ html, body {
     min-width: 620px;
 }
 
-#nowPlayingBar{
+#nowPlayingBar {
     display: flex;
     height: 90px;
     padding: 16px;
     box-sizing: border-box;
 }
 
-#nowPlayingLeft, #nowPlayingRight{
+#nowPlayingLeft, #nowPlayingRight {
     min-width: 180px;
     width: 30%;
 }
@@ -34,7 +34,7 @@ html, body {
     margin-top: 16px;
 }
 
-#nowPlayingCenter{
+#nowPlayingCenter {
     width: 40%;
     max-width: 700px;
     display: flex;
@@ -42,17 +42,17 @@ html, body {
     align-items: center;
 }
 
-#nowPlayingBar .content{
+#nowPlayingBar .content {
     width: 100%;
     height: 57px;
 }
 
-.playerControls .buttons{
+.playerControls .buttons {
     margin: 0 auto;
     display: table;
 }
 
-.controlButton{
+.controlButton {
     background-color: transparent;
     border: none;
     vertical-align: middle;
@@ -68,47 +68,47 @@ html, body {
     height: 32px
 }
 
-.controlButton:hover{
+.controlButton:hover {
     cursor: pointer;
 }
 
-.progressTime{
+.progressTime {
     text-align: center;
     color: #a0a0a0;
     font-size: 11px;
     min-width: 40px;
 }
 
-.progressBar{
+.progressBar {
     height: 12px;
     width: 100%;
     display: inline-flex;
     cursor: pointer;
 }
 
-.playbackBar{
+.playbackBar {
     display: flex;
 }
 
-.progressBarBg{
+.progressBarBg {
     width: 100%;
     background-color: #404040;
     height: 4px;
     border-radius: 2px;
 }
 
-.progress{
+.progress {
     border-radius: 2px;
     width: 0;
     height: 4px;
     background-color: #a0a0a0;
 }
 
-.playbackBar .progressBar{
+.playbackBar .progressBar {
     margin-top: 3px;
 }
 
-.albumArtwork{
+.albumArtwork {
     height: 100%;
     margin-right: 15px;
     max-width: 57px;
@@ -116,32 +116,41 @@ html, body {
     background-size: cover;
 }
 
-#nowPlayingLeft .trackInfo{
+#nowPlayingLeft .trackInfo {
     display: table;
 }
 
-#nowPlayingLeft .trackInfo .trackName{
+#nowPlayingLeft .trackInfo .trackName {
     display: inline-block;
     margin: 6px 0;
     width: 100%;
 }
 
-#nowPlayingLeft .trackInfo .artistName span{
+#nowPlayingLeft .trackInfo .artistName span {
     font-size: 12px;
     color: #a0a0a0;
 }
 
-.volumeBar{
+.volumeBar {
     width: 180px;
     position: absolute;
     right: 0;
 }
 
-.volumeBar .progressBar{
+.volumeBar .progressBar {
     width: 125px;
 }
 
-#topContainer{
+#topContainer {
     min-height: 100%;
     width: 100%;
+}
+
+#navBarContainer {
+    background-color: #000;
+    width: 220px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
