--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,7 @@ html, body {
 
 .logo img {
     width: 32px;
+    margin-bottom: 15px;
 }
 
 .navBar .group {
@@ -172,9 +173,22 @@ html, body {
 }
 
 .navItem {
-    padding: 7px;
-    font-size: 16px;
+    padding: 10px 0;
+    font-size: 14px;
     font-weight: 700;
     display: block;
     letter-spacing: 1px;
+    position: relative;
+}
+
+.navItemLink {
+    color: #a0a0a0;
+    text-decoration: none;
+}
+
+.navItemLink .icon {
+    position: absolute;
+    right: 0;
+    top: 6px;
+    width: 25px;
 }
