--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -381,7 +381,7 @@ body {
     margin-bottom: 20px;
 }
 
-.trackListContainer h2, .gridViewContainer h2 {
+.trackListContainer h2, .gridViewContainer h2, .artistContainer h2 {
     text-align: center;
 }
 
@@ -423,4 +423,9 @@ input:focus {
 
 .searchResultRow .artistName span {
     color: #fff;
+}
+
+.noResults {
+    margin: 15px;
+    display: block;
 }
